server container drag and drop works now
